crates/carta/tests/snapshots/golden_e2e__docbook__latex__math-variants.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A bold identifier: \(\mathbf{v}\).

Faces on single tokens:
\(\mathit{x}\mathcal{L}\mathfrak{g}\mathbb{R}\mathsf{s}\mathtt{t}\).

Faces on text:
\(\textbf{bold words}\textit{\textbf{both}}\textbf{\textit{\textsf{all three}}}\).

A face inherited by a whole row: \(\mathbf{a} + \mathbf{b}\).

A face inherited through nested constructs:
\(\frac{\mathfrak{p}}{\mathfrak{q}}\sqrt{\mathcal{y}}\).

A token overriding the face it inherits: \(\mathbf{a}\mathtt{b}\).

\[\mathbf{u = w}\]
