crates/carta/tests/snapshots/golden_e2e__docbook__latex__math.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
An inline equation \(a + b\) in prose.

And one written in MathML: \(x + 1\).

\[a^2 + b^2 = c^2\]

\[\frac{a}{b}\]
