crates/carta/tests/snapshots/golden_e2e__docbook__latex__media-alt.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\pandocbounded{\includegraphics[keepaspectratio,alt={The alternative wording}]{diagram.png}}

An inline
\pandocbounded{\includegraphics[keepaspectratio,alt={inline alternative}]{icon.png}}
image.
