crates/carta/tests/snapshots/golden_e2e__docbook__latex__media.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{figure}
\centering
\includegraphics[width=4in,height=2in,alt={A plotted curve}]{plot.png}
\caption{A captioned figure}\label{plot}
\end{figure}

A standalone block image:

\pandocbounded{\includegraphics[keepaspectratio]{standalone.png}}

An inline \pandocbounded{\includegraphics[keepaspectratio]{icon.png}}
image.
