crates/carta/tests/snapshots/golden_e2e__docbook__latex__reference.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\section{Description}

What it does.

\subsection{Details}

The finer points.

\section{Recursive reference section}

Body.

\section{General questions}

\textbf{Q:} Why?

\textbf{A:} Because.

\section{Sources}

\section{Books}

A book.
