crates/carta/tests/snapshots/golden_e2e__docbook__latex__table.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{longtable}[]{@{}lrc@{}}
\caption{A formal table}\label{rates}\tabularnewline
\toprule\noalign{}
Name & Count & Note \\
\midrule\noalign{}
\endfirsthead
\toprule\noalign{}
Name & Count & Note \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
First & 1 & A cell holding a paragraph. \\
Second & 2 & \\
\end{longtable}

{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
a & b \\
\end{longtable}
}
