crates/carta/tests/snapshots/golden_e2e__docbook__latex__tables-html.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{longtable}[]{@{}rc@{}}
\caption{A titled grid}\label{grid}\tabularnewline
\toprule\noalign{}
Head one & Head two \\
\midrule\noalign{}
\endfirsthead
\toprule\noalign{}
Head one & Head two \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
a & b \\
c & d \\
\end{longtable}

\begin{longtable}[]{@{}lll@{}}
\caption{A caption instead of a title}\tabularnewline
\toprule\noalign{}
\endfirsthead
\endhead
\bottomrule\noalign{}
\endlastfoot
Spans are not honored & & \\
x & y & z \\
\end{longtable}
